[gd_scene load_steps=12 format=3 uid="uid://caaveurjxgxc0"]

[ext_resource type="Script" uid="uid://7i644f6avibq" path="res://scripts/enemy_rolling.gd" id="1_sxg8y"]
[ext_resource type="Texture2D" uid="uid://derrs13jhybw5" path="res://sprites/enemies/Rolling (16 x 16).png" id="2_8yqm3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3pnvv"]
atlas = ExtResource("2_8yqm3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmu0d"]
atlas = ExtResource("2_8yqm3")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_upd5h"]
atlas = ExtResource("2_8yqm3")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7e18"]
atlas = ExtResource("2_8yqm3")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7myn6"]
atlas = ExtResource("2_8yqm3")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a18b2"]
atlas = ExtResource("2_8yqm3")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7x8j0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pnvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmu0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upd5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7e18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7myn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a18b2")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2nc1a"]
size = Vector2(18, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pqhw6"]
size = Vector2(16, 8.5)

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_sxg8y")

[node name="anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7x8j0")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.589026

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_2nc1a")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -5.75)
shape = SubResource("RectangleShape2D_pqhw6")
debug_color = Color(0.933188, 1.8771e-05, 0.645687, 0.42)

[node name="FallDetect" type="RayCast2D" parent="."]
target_position = Vector2(0, 20)

[node name="WallDetect" type="RayCast2D" parent="."]
position = Vector2(-1, 1)
target_position = Vector2(-15, 0)

[node name="WallDetect2" type="RayCast2D" parent="."]
position = Vector2(-3, 1)
target_position = Vector2(15, 0)

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
